Fix: onChangeOpen must be separate from onChangeContentVisibility for control - onChangeOpen is for the open/close state of the popover - onChangeContentVisibility is for the visibility of the content, use for analytics and timing after animation - reach out to group and consider removing onChangeContentVisibility functionality before merge   - it's tricky though, so may want to leave it in, hard to decide in this moment - added additional test cases for onChangeOpen - Internal refactors in modules: split exported components with syntax api from components used to wrap/extend components from react-aria-components   - AriaNamingConvention for ReactAriaComponents compatible extended interfaces   - apply syntax styles as atomic classnames to the extended components

--- a/packages/syntax-core/src/Dialog/ModalDialog.module.css
+++ b/packages/syntax-core/src/Dialog/ModalDialog.module.css
@@ -1,11 +1,9 @@
 .modalOverlay,
 .modal {
   visibility: visible;
-  box-sizing: border-box;
 }
 
 .modalOverlay {
-  position: fixed;
   inset: 0;
 }
 
